added image strin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BoMoApp</string>
+    <string name="compass_content_description">compass_content_description</string>
 </resources>
